--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: 6.1.0
+  uuid: ^4.2.2
+  intl: ^0.19.0
+  calendar_date_picker2: ^0.5.5
 
 dev_dependencies:
   flutter_test:
